fix(checkbox): truncate on ff

--- a/packages/oui-checkbox/_variables.less
+++ b/packages/oui-checkbox/_variables.less
@@ -1,7 +1,7 @@
 @import '../oui-color/_variables';
 
 // Checkbox
-@oui-checkbox-size: rem-calc(16);
+@oui-checkbox-size: rem-calc(17);
 @oui-checkbox-line-height: 1.5;
 @oui-checkbox-padding: rem-calc(0);
 @oui-checkbox-font-color: @oui-color-zodiac;
